--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.19",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "graphql": "^15.5.0",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
