--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/user-event": "^13.1.9",
     "babel-jest": "^27.0.2",
     "jest": "^27.0.4",
+    "prettier": "2.3.1",
     "react-test-renderer": "^17.0.2"
   }
 }
